atkobject: deprecate table properties that depends on the row/column number

https://bugzilla.gnome.org/show_bug.cgi?id=476674